Docs: The Komodo help dialog has been removed in favour of the new documentation site
rn=

(integrated from master branch change 9.2.1-551-g7233258 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/locale/en-US/komodo.dtd
+++ b/src/chrome/komodo/locale/en-US/komodo.dtd
@@ -789,40 +789,32 @@
 <!ENTITY helpForLanguages.label "Help for Languages">
 <!ENTITY helpLanguagesMenu.accesskey "L">
 <!ENTITY helpPerlMailingLists.desc "Help: Perl Mailing Lists">
-<!ENTITY helpPerlReferenceLocal.desc "Help: Perl Reference (Local)">
-<!ENTITY helpPerlReferenceWeb.desc "Help: Perl Reference (Web)">
+<!ENTITY helpPerlReferenceWeb.desc "Help: Perl Reference">
 <!ENTITY helpPythonMailingLists.desc "Help: Python Mailing Lists">
-<!ENTITY helpPythonReferenceLocal.desc "Help: Python Reference (Local)">
-<!ENTITY helpPythonReferenceWeb.desc "Help: Python Reference (Web)">
-<!ENTITY helpPython3ReferenceLocal.desc "Help: Python3 Reference (Local)">
-<!ENTITY helpPython3ReferenceWeb.desc "Help: Python3 Reference (Web)">
+<!ENTITY helpPythonReferenceWeb.desc "Help: Python Reference">
+<!ENTITY helpPython3ReferenceWeb.desc "Help: Python3 Reference">
 <!ENTITY helpPHPMailingLists.desc "Help: PHP Mailing Lists">
-<!ENTITY helpPHPReferenceWeb.desc "Help: PHP Reference (Web)">
+<!ENTITY helpPHPReferenceWeb.desc "Help: PHP Reference">
 <!ENTITY helpRubyMailingLists.desc "Help: Ruby Mailing Lists">
-<!ENTITY helpRubyReferenceWeb.desc "Help: Ruby Reference (Web)">
+<!ENTITY helpRubyReferenceWeb.desc "Help: Ruby Reference">
 <!ENTITY helpTclMailingLists.desc "Help: Tcl Mailing Lists">
-<!ENTITY helpTclReferenceLocal.desc "Help: Tcl Reference (Local)">
-<!ENTITY helpTclReferenceWeb.desc "Help: Tcl Reference (Web)">
+<!ENTITY helpTclReferenceWeb.desc "Help: Tcl Reference">
 <!ENTITY helpXSLTMailingLists.desc "Help: XSLT Mailing Lists">
-<!ENTITY helpXSLTReferenceWeb.desc "Help: XSLT Reference (Web)">
+<!ENTITY helpXSLTReferenceWeb.desc "Help: XSLT Reference">
 
 <!ENTITY perlMailingLists.label "Perl Mailing Lists">
-<!ENTITY perlReferenceLocal.label "Perl Reference (local)">
-<!ENTITY perlReferenceWeb.label "Perl Reference (web)">
+<!ENTITY perlReferenceWeb.label "Perl Reference">
 <!ENTITY pythonMailingLists.label "Python Mailing Lists">
-<!ENTITY pythonReferenceLocal.label "Python Reference (local)">
-<!ENTITY pythonReferenceWeb.label "Python Reference (web)">
-<!ENTITY python3ReferenceLocal.label "Python3 Reference (local)">
-<!ENTITY python3ReferenceWeb.label "Python3 Reference (web)">
+<!ENTITY pythonReferenceWeb.label "Python Reference">
+<!ENTITY python3ReferenceWeb.label "Python3 Reference">
 <!ENTITY PHPMailingLists.label "PHP Mailing Lists">
-<!ENTITY PHPReferenceWeb.label "PHP Reference (web)">
+<!ENTITY PHPReferenceWeb.label "PHP Reference">
 <!ENTITY rubyMailingLists.label "Ruby Mailing Lists">
-<!ENTITY rubyReferenceWeb.label "Ruby Reference (web)">
+<!ENTITY rubyReferenceWeb.label "Ruby Reference">
 <!ENTITY tclMailingLists.label "Tcl Mailing Lists">
-<!ENTITY tclReferenceLocal.label "Tcl Reference (local)">
-<!ENTITY tclReferenceWeb.label "Tcl Reference (web)">
+<!ENTITY tclReferenceWeb.label "Tcl Reference">
 <!ENTITY XSLTMailingLists.label "XSLT Mailing Lists">
-<!ENTITY XSLTReferenceWeb.label "XSLT Reference (Web)">
+<!ENTITY XSLTReferenceWeb.label "XSLT Reference">
 
 <!--about.dtd-->
 
