Locale: Rename more instances of macro to userscript
(integrated from master branch change 9.2.1-569-gbabd479 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/locale/en-US/project/macro.properties
+++ b/src/chrome/komodo/locale/en-US/project/macro.properties
@@ -2,9 +2,9 @@ apply=Apply
 applyAccessKey=A
 Create New Userscript=Create New Userscript
 Userscript Properties=Userscript Properties
-Triggering of macros on events has been disabled=Triggering of macros on events has been disabled in Edit/Preferences/Workspace...
+Triggering of macros on events has been disabled=Triggering of userscripts on events has been disabled in Edit/Preferences/Workspace...
 Do you wish to save your changes=Do you wish to save your changes?
-Macro was modified=Macro was modified
+Macro was modified=Userscript was modified
 namedProperties='%S' Properties
 unnamedProperties=Unnamed '%S' Properties
 The custom icon specified for this X is missing=The custom icon specified for this %S is missing. Please choose another.
@@ -12,8 +12,8 @@ running=running
 The current userscript=The current userscript
 compiling=compiling
 running=running
-Macro X Error=Macro %S Error
-X error in macro Y=%S Error in macro "%S":
-X error in macro=%S Error in macro "%S":
+Macro X Error=Userscript %S Error
+X error in macro Y=%S Error in userscript "%S":
+X error in macro=%S Error in userscript "%S":
 Syntax=Syntax
 Runtime=Runtime
