--- a/src/modules/scope_packages/locale/en-US/scope-packages.properties
+++ b/src/modules/scope_packages/locale/en-US/scope-packages.properties
@@ -29,7 +29,7 @@ uninstallTimeout=Uninstallation for "%S" appears to have timed out. Check your e
 
 addons=Addons
 toolbox=Toolbox
-macros=Macros
+macros=Userscripts
 schemes=Color Schemes
 skins=Skins
 keybinds=Keybindings
