Open Files: You can now close file groups or all files from the Open Files widget
rn=

(integrated from master branch change 9.2.1-571-ga6359b5 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/openfiles/locale/en-US/openfiles.dtd
+++ b/src/modules/openfiles/locale/en-US/openfiles.dtd
@@ -2,6 +2,7 @@
 <!ENTITY viewEditorTabs.label "Show Editor Tabs">
 <!ENTITY viewEditorTabs.tooltip "Toggle Editor Tabs">
 <!ENTITY closeFile.tooltip "Close File">
+<!ENTITY closeFiles.tooltip "Close Files">
 
 <!ENTITY userInterfaceShowHideOpenFilesTab.desc "User Interface: Show/Hide Open Files Pane">
 <!ENTITY userInterfaceFocusOpenFilesTab.desc "User Interface: Focus on Open Files Pane">
