--- a/src/chrome/komodo/locale/en-US/komodo.dtd
+++ b/src/chrome/komodo/locale/en-US/komodo.dtd
@@ -330,6 +330,32 @@
 <!ENTITY generalSwitchToTab8.desc "General: Switch to Tab 8">
 <!ENTITY generalSwitchToTab9.desc "General: Switch to Tab 9">
 <!ENTITY generalTogglePanels.desc "General: Toggle Panels">
+
+<!ENTITY quickbookmark.menu.label "Quick Bookmarks">
+<!ENTITY quickbookmark.menu.accesskey "b">
+
+<!ENTITY quickbookmarkToggle_1.lable "Toggle bookmark 1">
+<!ENTITY quickbookmarkToggle_2.lable "Toggle bookmark 2">
+<!ENTITY quickbookmarkToggle_3.lable "Toggle bookmark 3">
+<!ENTITY quickbookmarkToggle_4.lable "Toggle bookmark 4">
+<!ENTITY quickbookmarkToggle_5.lable "Toggle bookmark 5">
+<!ENTITY quickbookmarkToggle_6.lable "Toggle bookmark 6">
+<!ENTITY quickbookmarkToggle_7.lable "Toggle bookmark 7">
+<!ENTITY quickbookmarkToggle_8.lable "Toggle bookmark 8">
+<!ENTITY quickbookmarkToggle_9.lable "Toggle bookmark 9">
+<!ENTITY quickbookmarkToggle_0.lable "Toggle bookmark 0">
+
+<!ENTITY quickbookmarkGoTo_1.lable "Go to bookmark 1">
+<!ENTITY quickbookmarkGoTo_2.lable "Go to bookmark 2">
+<!ENTITY quickbookmarkGoTo_3.lable "Go to bookmark 3">
+<!ENTITY quickbookmarkGoTo_4.lable "Go to bookmark 4">
+<!ENTITY quickbookmarkGoTo_5.lable "Go to bookmark 5">
+<!ENTITY quickbookmarkGoTo_6.lable "Go to bookmark 6">
+<!ENTITY quickbookmarkGoTo_7.lable "Go to bookmark 7">
+<!ENTITY quickbookmarkGoTo_8.lable "Go to bookmark 8">
+<!ENTITY quickbookmarkGoTo_9.lable "Go to bookmark 9">
+<!ENTITY quickbookmarkGoTo_0.lable "Go to bookmark 0">
+
 <!ENTITY goToDefinition.accesskey "D">
 <!ENTITY goToDefinition.label "Go to Definition">
 <!ENTITY gotoLine.accesskey "G">
