fix: Commands: Fixed erroneous command description - fixes #615
(integrated from master branch change 9.2.1-592-g7ea8f34 by Mitchell <mitchellb@activestate.com>)

--- a/src/chrome/komodo/locale/en-US/komodo.dtd
+++ b/src/chrome/komodo/locale/en-US/komodo.dtd
@@ -774,7 +774,7 @@
 <!ENTITY userInterfaceShowHideBottomPane.desc "User Interface: Show/Hide Bottom Pane">
 <!ENTITY userInterfaceShowHideLeftPane.desc "User Interface: Show/Hide Left Pane">
 <!ENTITY userInterfaceShowHideStandardToolbar.desc "User Interface: Show/Hide Standard Toolbar">
-<!ENTITY userInterfaceShowHideMenubar.desc "User Interface: Show/Hide All Toolbars">
+<!ENTITY userInterfaceShowHideMenubar.desc "User Interface: Show/Hide Menubar">
 <!ENTITY userInterfaceShowHideToolbars.desc "User Interface: Show/Hide All Toolbars">
 <!ENTITY userInterfaceShowHideToolbarButtonText.desc "User Interface: Show/Hide Toolbar Button Text">
 <!ENTITY userInterfaceShowHideRightPane.desc "User Interface: Show/Hide Right Pane">
