Locale: Macros > Userscripts
(integrated from master branch change 9.2.1-598-g2de15d1 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/getstarted/locale/en-US/getstarted.dtd
+++ b/src/modules/getstarted/locale/en-US/getstarted.dtd
@@ -38,7 +38,7 @@
 <!ENTITY installExt.label "Install Packages">
 <!ENTITY extOne.label "Install Addons">
 <!ENTITY extOne.description "- extend Komodos functionality">
-<!ENTITY extTwo.label "Install Macros">
+<!ENTITY extTwo.label "Install Userscripts">
 <!ENTITY extTwo.description "- quickly add new features">
 <!ENTITY extThree.label "Install Color Schemes">
 <!ENTITY extThree.description "- color Komodo to your liking">
