OpenFiles: Fix tab sorting won't toggle - fixes #841
rn=

(integrated from master branch change 9.2.1-684-g2bf67e3 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/openfiles/locale/en-US/openfiles.dtd
+++ b/src/modules/openfiles/locale/en-US/openfiles.dtd
@@ -10,6 +10,7 @@
 <!ENTITY groupFiles.label "Group Open Files">
 <!ENTITY sortTabs.label "Sort Tabs">
 <!ENTITY groupFiles.desc "OpenFiles Widget: Arrange Open Files in Groups">
+<!ENTITY sortTabs.desc "OpenFiles Widget: Sort Tabs">
 <!ENTITY groupByLang.label "Group By Language">
 <!ENTITY groupByLang.desc "OpenFiles Widget: Group Open Files by Language">
 <!ENTITY groupByExt.label "Group By Extension">
