UI: Clean up side pane appearance
(integrated from master branch change 9.2.1-722-gca5d469 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/locale/en-US/komodo.dtd
+++ b/src/chrome/komodo/locale/en-US/komodo.dtd
@@ -234,8 +234,10 @@
 <!ENTITY filePosition.tooltiptext "File Position">
 <!ENTITY filePreferences.label "File Preferences">
 <!ENTITY fileType.tooltiptext "File Type">
+<!ENTITY filterSymbols.placeholder "Filter Symbols ..">
 <!ENTITY find.label "Find...">
 <!ENTITY findAllFunctions.label "Find All Functions">
+<!ENTITY findFilter.placeholder "Filter Tools ..">
 <!ENTITY findFilter.tooltiptext "Only show matches containing these space-separated words. Use minus '-' at the start of a word to exclude matches.">
 <!ENTITY search.tooltiptext "Search Again..">
 <!ENTITY findFind.desc "Find: Find...">
