--- a/src/chrome/komodo/locale/en-US/pref/pref.dtd
+++ b/src/chrome/komodo/locale/en-US/pref/pref.dtd
@@ -477,6 +477,7 @@ adding an additional caret at the clicked position.">
 <!ENTITY workspace.label "Workspace">
 <!ENTITY wrapSelection.label "Wrap selection with typed delimiter instead of overwriting it">
 <!ENTITY wrapSelectionDelimiters.label "Delimiters:">
+<!ENTITY wrapSelectionKeep.label "Retain selected text">
 <!ENTITY wrapSelectionOnlyPlainText.label "Only wrap plain text selections">
 <!ENTITY xDefaultDateRepresentation.label "&#37;x : default date representation">
 <!ENTITY xmlXML.label ".xml: XML">
