--- a/src/chrome/komodo/locale/en-US/pref/pref-languages.properties
+++ b/src/chrome/komodo/locale/en-US/pref/pref-languages.properties
@@ -59,6 +59,7 @@ Komodo does no syntax-checking on X documents=Komodo does no syntax-checking on 
 Check syntax for X=Check syntax for %S
 Cant find CoffeeScript, update the PATH to include it, and restart Komodo=Can't find CoffeeScript. You'll need to either update the PATH to include it, or move it into a directory on PATH, and then restart Komodo
 Cant find jsxhint, update the PATH to include it, and restart Komodo=Can't find jsxhint. You'll need to either update the PATH to include it, or move it into a directory on PATH, and then restart Komodo
+Cant find tslint, update the PATH to include it, and restart Komodo=Can't find tslint. You'll need to either update the PATH to include it, or move it into a directory on PATH, and then restart Komodo
 
 # pref-syntax-checking javascript
 No such file=No such file
