--- a/src/chrome/komodo/locale/en-US/pref/pref.dtd
+++ b/src/chrome/komodo/locale/en-US/pref/pref.dtd
@@ -723,6 +723,10 @@ adding an additional caret at the clicked position.">
 <!ENTITY customJshintLinter.label "Custom linter">
 <!ENTITY separateNamesWithCommas.tooltip "Separate names with commas and/or spaces.">
 
+<!-- TypeScript -->
+<!ENTITY lintTypeScriptWithTSLint.label "Check Code with tslint">
+<!ENTITY lintTSLintConfigFile.label "tslint Config File">
+
 <!--pref-keys.xul-->
 <!ENTITY keyBindingsConfiguration.description "Key bindings determine what key shortcuts will start what command. Click on a command to see and modify its key configuration.">
 <!ENTITY removeAltKeyFromMenu.label "Remove Alt-&lt;letter&gt; shortcuts from menus">
