--- a/src/chrome/komodo/locale/en-US/pref/pref.dtd
+++ b/src/chrome/komodo/locale/en-US/pref/pref.dtd
@@ -649,7 +649,7 @@ adding an additional caret at the clicked position.">
 <!ENTITY bytes.label "bytes">
 <!ENTITY find.label "Find">
 <!ENTITY findFrame.label "Find Frame">
-<!ENTITY pinFindFrame.label "Pin the Find Frame (use ESCAPE to close)">
+<!ENTITY pinFindFrame.label "Never auto-close the find frame">
 <!ENTITY findInFiles.label "Find in Files">
 <!ENTITY findHighlighting.label "Highlighting">
 <!ENTITY findHighlightEnabled.label "Enable highlighting of find and replace results">
