serverprefs: default path only abs path, fixes #692
(integrated from master branch change 9e30c71 by Carey Hoffman <cgchoffman@gmail.com>)

--- a/src/chrome/komodo/locale/en-US/pref/pref.dtd
+++ b/src/chrome/komodo/locale/en-US/pref/pref.dtd
@@ -868,7 +868,7 @@ adding an additional caret at the clicked position.">
 <!ENTITY portNumber.label "Port">
 <!ENTITY userName.label "Username (*)">
 <!ENTITY password.label "Password">
-<!ENTITY defaultPath.label "Default path">
+<!ENTITY defaultPath.label "Default path (absolute only)">
 <!ENTITY requiredFieldMark.label "Required fields are marked with (*)">
 <!ENTITY timeoutSeconds.label "Timeout (seconds):">
 
