UI: Add help menuitem to run first start wizard
(integrated from master branch change 9.2.1-1502-g43d6890 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/locale/en-US/komodo.dtd
+++ b/src/chrome/komodo/locale/en-US/komodo.dtd
@@ -414,6 +414,7 @@
 <!ENTITY komodoBugDatabase.label "Report a Bug">
 <!ENTITY komodoBugDatabase.tooltiptext "Report a bug on GitHub">
 <!ENTITY komodoCommunity.label "Komodo Community">
+<!ENTITY runStartupWizard.label "Run First Start Wizard Again">
 <!ENTITY komodoCommunity.tooltiptext "Komodo Community">
 <!ENTITY komodoEmailLists.tooltiptext "Komodo Email Lists">
 <!ENTITY komodoMemoryUsage.desc "Utilities: Report of Komodo's Memory Usage">
