UI: Add menu item for legacy addons dialog
Still seems to occur often that people need functionality from this.
We'll leave it in until we perfected the new implementation.

(integrated from master branch change 9.2.1-1507-g82c6d5a by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/locale/en-US/komodo.dtd
+++ b/src/chrome/komodo/locale/en-US/komodo.dtd
@@ -228,6 +228,7 @@
 <!ENTITY exportAsZipFile.label "Export as Zip File...">
 <!ENTITY extensionManager.accesskey "A">
 <!ENTITY extensionManager.label "Add-ons">
+<!ENTITY extensionManagerLegacy.label "Add-ons (Legacy)">
 <!ENTITY file.label "File">
 <!ENTITY fileOpen.label "File...">
 <!ENTITY fileEncoding.tooltiptext "File Encoding">
