UI: Added a color scheme editor menu entry to the tools menu
(integrated from master branch change 9.2.1-1574-g8af2047 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/locale/en-US/komodo.dtd
+++ b/src/chrome/komodo/locale/en-US/komodo.dtd
@@ -80,6 +80,7 @@
 <!ENTITY commentRegion.label "Comment Region">
 <!ENTITY community.label "Community">
 <!ENTITY compareFiles.label "Compare Files...">
+<!ENTITY colorSchemeEditor.label "Color Scheme Editor">
 <!ENTITY completeWord.label "Complete Word">
 <!ENTITY content.label "Content">
 <!ENTITY controlClick.accesskey "Ctrl+Click">
