ux: indent: Mention that per-language indent changes do not reflect immediately - fixes #1246 Global indentation settings do take effect immediately.
rn=

(integrated from master branch change 9.2.1-1712-g64d56a1 by Mitchell <mitchellb@activestate.com>)

--- a/src/chrome/komodo/locale/en-US/pref/pref.dtd
+++ b/src/chrome/komodo/locale/en-US/pref/pref.dtd
@@ -302,6 +302,7 @@ adding an additional caret at the clicked position.">
 <!ENTITY indentation.label "Indentation">
 <!ENTITY indentationGlobalSettings.label "Global Indentation Settings">
 <!ENTITY indentation-per-language.label "Per Language Indentation Settings">
+<!ENTITY indentation-per-language-reload-notice.descr "If you make any changes to these per-language settings, you will need to reload any open files of that type or restart Komodo in order for your changes to take effect.">
 <!ENTITY internationalization.label "Internationalization">
 <!ENTITY invisible.label "Invisible">
 <!ENTITY javaScript.label "JavaScript">
