--- a/src/chrome/komodo/locale/en-US/pref/pref.dtd
+++ b/src/chrome/komodo/locale/en-US/pref/pref.dtd
@@ -460,6 +460,7 @@ adding an additional caret at the clicked position.">
 <!ENTITY useShebangLine.label "Use shebang line (#!...)">
 <!ENTITY useSignatureBOM.label "Use Byte Order Mark (BOM) signature">
 <!ENTITY useSmartIndent.label "Use Smart Indent">
+<!ENTITY useSmartIndentNoLineUp.label "Use Smart Indent (no continuing statement line-up)">
 <!ENTITY useSSHKeyCheckbox.label "Specify an OpenSSH key file for authentication">
 <!ENTITY useSSHKeyTextbox.tooltip "The file path of the private key you wish to use for Authentication (the file must be in the OpenSSH private key format). If a password is required - it will be prompted for on first use of this key.">
 <!ENTITY useTabCharacterToCompleteWordsLikeCtrlSpace.label "Use Tab character to complete words like Ctrl+Space">
