editor: Added in-line selection duplicate left/right commands. This replaces the functionality lost in line/selection duplicate up/down. That functionality had been around since at least Komodo 8.
rn=

(integrated from master branch change 9.2.1-1731-g09b174a by Mitchell <mitchellb@activestate.com>)

--- a/src/chrome/komodo/locale/en-US/komodo.dtd
+++ b/src/chrome/komodo/locale/en-US/komodo.dtd
@@ -129,6 +129,8 @@
 <!ENTITY editorDeleteWordRight.desc "Editor: Delete Word Right">
 <!ENTITY editorDuplicateLineUp.desc "Editor: Duplicate Line/Selection Up">
 <!ENTITY editorDuplicateLineDown.desc "Editor: Duplicate Line/Selection Down">
+<!ENTITY editorDuplicateSelectionLeft.desc "Editor: Duplicate In-line Selection Left">
+<!ENTITY editorDuplicateSelectionRight.desc "Editor: Duplicate In-line Selection Right">
 <!ENTITY editorEndOfLine.desc "Editor: End of Line">
 <!ENTITY editorExchangeCurrentPointAndMark.desc "Editor: Exchange Current Point and Mark">
 <!ENTITY editorGoToBeginningOfWord.desc "Editor: Go to Beginning of word">
